# invest-sdr-usle-c-raster

./: .gitignore  README.md  invest_registry_description.md  pyproject.toml
sample-data/: DEM_gura.tif  DEM_gura.tif.aux.xml  DEM_gura.tif.xml  _README_InVEST_SDR_USLE_C_Raster_sample_data.txt  biophysical_table_Gura.csv  c_gura.tif  erodibility_gura.tif.aux.xml  erodibility_gura.tif.xml  erosivity_gura.tif.aux.xml  erosivity_gura.tif.xml  invest_sdr_usle_c_raster_gura.invs.json  land_use_gura.tif.aux.xml  subwatersheds_gura.shp.xml  watershed_gura.shp.xml
src/invest-sdr-usle-c-raster/: invest-sdr-usle-c-raster.py  sdr_core.cpp  sdr_core.pyx
src/invest_sdr_usle_c_raster/: __init__.py  invest_sdr_usle_c_raster.py
test-data/input/: biophysical_table.csv  c.tif  dem.tif.aux.xml  erodibility_SI_clip.tif.aux.xml  erosivity.tif.aux.xml
tests/: test_invest_sdr_usle_c_raster.py
