[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest_sdr_usle_c_raster"
version = "0.0.1"
dependencies = [
    "natcap.invest>=3.18.0",
    "pygeoprocessing",
    "taskgraph"
]
description = "Sediment Delivery Ratio (SDR) with USLE C raster (an InVEST plugin)"

[tool.natcap.invest]
api_version = "v1"
package_name = "invest_sdr_usle_c_raster"
conda_dependencies = [
  "gdal",
  "geotiff>=1.7.3",  # earlier versions don't support space in CONDA_PREFIX
  "natcap.invest>=3.18.0",
  "pygeoprocessing",
  "python",
]
